<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="?attr/fonColor"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_margin="8dp"
        >

        <ImageView
            android:id="@+id/settingBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            />


        <ImageView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_exit"
            />

    </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="?attr/fonColor"
        android:background="?attr/fonColor"
        tools:ignore="UnusedAttribute"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="?attr/fonColor"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_theme_title"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/theme_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_theme_first"
                    android:textStyle="bold"
                    android:textColor="?attr/textColor"
                    />

                <RadioButton
                    android:id="@+id/theme_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_theme_second"
                    android:textStyle="bold"
                    android:textColor="?attr/textColor"
                    />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="4dp"
        android:backgroundTint="?attr/fonColor"
        android:background="?attr/fonColor"
        tools:ignore="UnusedAttribute">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp"
            android:background="?attr/fonColor"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_language_title"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/radio_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/language_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/setting_language_first"
                    android:textStyle="bold"
                    android:textColor="?attr/textColor"
                    />

                <RadioButton
                    android:id="@+id/language_second"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_language_second"
                    android:textStyle="bold"
                    android:textColor="?attr/textColor"
                    />

                <RadioButton
                    android:id="@+id/language_third"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_language_third"
                    android:textStyle="bold"
                    android:textColor="?attr/textColor"
                    />
            </RadioGroup>
        </LinearLayout>
    </androidx.cardview.widget.CardView>




    <!--

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberFirstLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="Введите номер вашего телефона:"
        app:endIconMode="clear_text"
        app:prefixText="+7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberFirstEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberSecondLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="Номер установленный в теплице:"
        app:endIconMode="clear_text"
        app:prefixText="+7">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/numberSecondEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="Сохранить" />

        -->


</LinearLayout>