<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/fonColor"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/menuTemp"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="?attr/fonColor">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/temperature" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/tempurature"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/menuHumdty"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/humidty" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/humdty"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/menuCamera"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/camera" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/camera"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:id="@+id/menuControl"
                style="@style/Widget.MaterialComponents.Button"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/control" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/control"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/menuSetting"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/app_setting" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/setting"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_margin="8dp"
                android:layout_weight="1"
                style="@style/Widget.MaterialComponents.Button"
                android:id="@+id/menuUpdate"
                android:backgroundTint="?attr/fonColor"
                android:background="?attr/fonColor"
                tools:ignore="UnusedAttribute"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:background="?attr/fonColor">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:src="@drawable/update2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:text="@string/update"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>


<!--            <View-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_weight="1"/>-->


        </LinearLayout>

    </LinearLayout>
</ScrollView>