<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:id="@+id/temperatureInfo"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempurature"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/temperatureChart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:id="@+id/humdtyInfo"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humdty"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/humdtyChart"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:id="@+id/cameraInfo"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:src="@drawable/c1"
                    android:scaleType="centerCrop"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="4dp"
            android:id="@+id/temp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tempurature"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <com.anychart.anychart.AnyChartView
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:id="@+id/anychart"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</ScrollView>